# GPU-Renderer

./: CMakeLists.txt  GPU-Renderer.sln  README.md  cudabvh.h
.github/workflows/: ccpp.yml
GPU-Renderer/: GPU-Renderer.vcxproj  GPU-Renderer.vcxproj.filters
cmake/: FindGLUT.cmake
images/: Performance.xlsx
record/: record.md
scene/CBox/: cbox(mesh).xml  cbox(sphere).xml  cbox.xml
scene/CornellBox/: 1.pbrt  CornellBox-Mirror.mtl  CornellBox-Original.mtl  CornellBox-Sphere.mtl  CornellBox-Water.mtl
scene/caustic-glass/: glass.pbrt
scene/cornell-box/: scene.pbrt
scene/mori_knob/: testObj.mtl
scene/veach-mis/: scene - 副本.pbrt  scene.pbrt
scene/volumetric-caustic/: scene1.pbrt
src/: main.cpp
src/GUI/: gui.cpp  gui.h
src/kernel/: kernel.cu
src/renderer/: aabb.h  bsdf.h  bvh.h  camera.h  environment.cpp  environment.h  framebuffer.cpp  framebuffer.h  fwd.h  imageio.cpp  imageio.h  material.h  pathtracer.cpp  pathtracer.cu  pathtracer.h  pathtracer_kernel.h  ray.h  rayqueue.h  sampling.h  scene.cpp  scene.h  spectrum.h  texture.cpp  texture.h  transform.cpp  transform.h  triangle.cpp  triangle.h  vertex.h
src/renderer/bsdfs/: bxdf.h  fresnel.h  lambert.h  microfacet.h  optical.h  specular.cu  specular.h
src/renderer/core/: api.cpp  api.h  bsdf.h  bvh.cpp  bvh.h  camera.cpp  camera.h  cpurender.h  film.cpp  film.h  filter.h  fwd.h  geometry.h  gpurender.h  integrator.cpp  integrator.h  interaction.h  light.cpp  light.h  material.cpp  material.h  medium.h  memory.h  microfacet.h  optic.h  parameterset.cpp  parameterset.h  primitive.h  renderer.h  sampler.h  sampling.cpp  sampling.h  scene.cpp  scene.h  shape.h  spectrum.cpp  spectrum.h  transform.cpp  transform.h  triangle.cpp  (+1 more)
src/renderer/kernel/: cudabvh.h  cudarenderer.h  cudascene.cpp  cudascene.h  kernel.cu
src/renderer/light/: arealight.cpp  arealight.h
src/renderer/loader/: mitsubaloader.cpp  mitsubaloader.h  objloader.h  pbrtloader.cpp  pbrtloader.h  sceneloader.h
src/renderer/loaders/: loader.h  mitsubaloader.cpp  mitsubaloader.h  objloader.cpp  objloader.h  propertylist.cpp  propertylist.h
src/renderer/material/: matte.cpp  matte.h
src/renderer/sampler/: random.cpp  random.h
src/renderer/shape/: trianglemesh.cpp  trianglemesh.h
src/utility/: buffer.h  helper_functions.h  helper_image.h  helper_logger.h  helper_math.h  helper_string.h  memory_arena.h  types.h
src/utility/CUDA/: warp_atomic.h
